# Sand-Dune

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Plan.md  imgui.ini  vcpkg.json  window.ini
Docs/: BOS Software Build Plan.md
Docs/.obsidian/: workspace.json
docs/: header.html
include/: session.h
include/grains/: piv.h  reconstruction.h  validation.h
include/sun/: image.h  mask.h
include/water/: app.h  ui.h
include/wind/: opticalparameters.h  parameters.h  pivparameters.h  vectorfield.h
src/: main.cpp  session.cpp
src/grains/: piv.cpp  reconstruction.cpp  validation.cpp
src/sun/: image.cpp  mask.cpp
src/sun/lib/: stb.cpp
src/water/: app.cpp  ui.cpp
src/wind/: vectorfield.cpp
tests/: test.cpp
